--- a/pom.xml
+++ b/pom.xml
@@ -2321,6 +2321,11 @@
         <artifactId>kafka-clients</artifactId>
         <version>${kafka.version}</version>
       </dependency>
+      <dependency>
+        <groupId>com.univocity</groupId>
+        <artifactId>univocity-parsers</artifactId>
+        <version>2.8.3</version>
+      </dependency>
 
       <dependency>
         <groupId>com.palantir.safe-logging</groupId>
