--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ defaults: &defaults
     TERM: dumb
     BUILD_SBT_CACHE: "/home/circleci/build-sbt-cache"
 
+
 test-defaults: &test-defaults
   <<: *defaults
   environment:
@@ -27,8 +28,8 @@ deployable-branches-and-tags: &deployable-branches-and-tags
     tags:
       only: /[0-9]+(?:\.[0-9]+){2,}-palantir\.[0-9]+(?:\.[0-9]+)*/
     branches:
-      only:
-        - master
+      only: master
+
 
 # Step templates
 
