--- a/core/pom.xml
+++ b/core/pom.xml
@@ -300,10 +300,10 @@
         </exclusion>
       </exclusions>
     </dependency>
-    <dependency>
-      <groupId>io.dropwizard.metrics</groupId>
-      <artifactId>metrics-jmx</artifactId>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>io.dropwizard.metrics</groupId>-->
+<!--      <artifactId>metrics-jmx</artifactId>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
