--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,10 @@ deployable-branches-and-tags: &deployable-branches-and-tags
     tags:
       only: /[0-9]+(?:\.[0-9]+){2,}-palantir\.[0-9]+(?:\.[0-9]+)*/
     branches:
-      only: master
+      only:
+       - master
+       - pt-diff-on-3.0-base
+       - jc/rectify-merge-breaks
 
 
 # Step templates
