--- a/hadoop-cloud/pom.xml
+++ b/hadoop-cloud/pom.xml
@@ -193,6 +193,11 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+        <groupId>org.apache.hadoop</groupId>
+        <artifactId>hadoop-azure-datalake</artifactId>
+        <scope>${hadoop.deps.scope}</scope>
+    </dependency>
   </dependencies>
 
   <profiles>
