--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,9 @@ all-branches-and-tags: &all-branches-and-tags
 deployable-branches-and-tags: &deployable-branches-and-tags
   filters:
     tags:
-      only: /[0-9]+(?:\.[0-9]+){2,}-palantir\.[0-9]+(?:\.[0-9]+)*/
+      only:
+        - /[0-9]+(?:\.[0-9]+){2,}-palantir\.[0-9]+(?:\.[0-9]+)*/
+        - /[0-9]+(?:\.[0-9]+){2,}-alpha\.[0-9]+(?:\.[0-9]+)*/
     branches:
       only:
        - master
