--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,9 +25,9 @@ all-branches-and-tags: &all-branches-and-tags
 deployable-branches-and-tags: &deployable-branches-and-tags
   filters:
     tags:
-      only:
-        - /[0-9]+(?:\.[0-9]+){2,}-palantir\.[0-9]+(?:\.[0-9]+)*/
-        - /[0-9]+(?:\.[0-9]+){2,}-alpha\.[0-9]+(?:\.[0-9]+)*/
+      # Will publish tags like: 3.0.1-palantir.1, 3.2.1-alpha.6, 4.8.12-beta.93
+      # Think SemVer but pre-releases must end with dot-number and called 'alpha', 'beta', or 'palantir'
+      only: /[0-9]+(?:\.[0-9]+){2,}-(palantir|alpha|beta)\.[0-9]+(?:\.[0-9]+)*/
     branches:
       only:
        - master
