Make all tags deployable

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ all-branches-and-tags: &all-branches-and-tags
 deployable-branches-and-tags: &deployable-branches-and-tags
   filters:
     tags:
-      only: /[0-9]+(\.[0-9]+){2,}-palantir\.[0-9]+(-[0-9a-zA-Z-]+\.[0-9]+)?/
+      only: /.*/
     branches:
       only:
        - master
