Add 'hadoop-cloud' module to Palantir profile

--- a/pom.xml
+++ b/pom.xml
@@ -3127,6 +3127,9 @@
 
     <profile>
       <id>hadoop-palantir</id>
+      <modules>
+        <module>hadoop-cloud</module>
+      </modules>
     </profile>
 
     <profile>
