--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,6 @@
     <module>dists/hadoop-palantir-bom</module>
     <module>dists/hadoop-palantir</module>
     <module>graphx</module>
-    <module>hadoop-cloud</module>
     <module>mllib</module>
     <module>mllib-local</module>
     <module>resource-managers/kubernetes/core</module>
@@ -3128,6 +3127,9 @@
 
     <profile>
       <id>hadoop-palantir</id>
+      <modules>
+        <module>hadoop-cloud</module>
+      </modules>
     </profile>
 
     <profile>
