--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,7 +152,9 @@ jobs:
           keys:
             - build-binaries-{{ checksum "build/mvn" }}-{{ checksum "build/sbt" }}
             - build-binaries-
-      - run: ./build/mvn -DskipTests -Psparkr install
+      - run:
+          command: ./build/mvn -DskipTests -Psparkr install
+          no_output_timeout: 20m
       # Get sbt to run trivially, ensures its launcher is downloaded under build/
       - run: ./build/sbt -h || true
       - save_cache:
