--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -295,7 +295,7 @@ jobs:
           command: dev/set_version_and_package.sh
       - persist_to_workspace:
           root: /home/circleci
-          paths: [ project ]
+          paths: [ project, .m2 ]
 
   deploy-gradle:
     <<: *defaults
