Only cache build tools after build-maven

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,10 +43,10 @@ step_templates:
       name: Create file of pom.xml checksums
       command: find . -maxdepth 4 -name 'pom.xml' -exec shasum {} \; > /tmp/pom_checksums.txt
   cache-build-tools: &cache-build-tools
-    # Upstream's caching scheme:
-    # https://github.com/apache/spark/blob/eb5558ed35d51215de2ab12156e477cd7130a66a/.github/workflows/build_and_test.yml#L183-L194
+    # Upstream's caching scheme: https://github.com/apache/spark/blob/eb5558ed35d51215de2ab12156e477cd7130a66a/.github/workflows/build_and_test.yml#L183-L194
+    # Only save_cache in build-maven job, which downloads both mvn and sbt tools
     save_cache:
-      key: build-cache-v1-{{ .Branch }}-{{ checksum "/tmp/pom_checksums.txt" }}-{{ checksum "project/build.properties" }}
+      key: build-tool-cache-v1-{{ .Branch }}-{{ checksum "/tmp/pom_checksums.txt" }}-{{ checksum "project/build.properties" }}
       paths:
         - project/build/apache-maven-*
         - project/build/zinc-*
@@ -55,9 +55,9 @@ step_templates:
   restore-build-tools: &restore-build-tools
     restore_cache:
       keys:
-        - build-cache-v1-{{ .Branch }}-{{ checksum "/tmp/pom_checksums.txt" }}-{{ checksum "project/build.properties" }}
-        - build-cache-v1-{{ .Branch }}-
-        - build-cache-v1-
+        - build-tool-cache-v1-{{ .Branch }}-{{ checksum "/tmp/pom_checksums.txt" }}-{{ checksum "project/build.properties" }}
+        - build-tool-cache-v1-{{ .Branch }}-
+        - build-tool-cache-v1-
   checkout-code: &checkout-code
     run:
       name: Checkout code
@@ -207,7 +207,6 @@ jobs:
       - store_artifacts:
           path: /tmp/build-apache-spark.log
           destination: build-apache-spark.log
-      - *cache-build-tools
       - save_cache:
           key: ivy2-cache-v1-{{ .Branch }}-{{ checksum "/tmp/pom_checksums.txt" }}
           paths: [ ~/.ivy2/cache ]
